--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"type-check": "tsc --noEmit",
 		"type-check:watch": "tsc --noEmit --watch",
-		"clean": "rm -rf dist node_modules/.tmp"
+		"clean": "rm -rf dist node_modules/.tmp",
+		"test": "vitest",
+		"test:ui": "vitest --ui",
+		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"firebase": "^12.4.0",
@@ -21,19 +24,25 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.36.0",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.0",
 		"@types/node": "^24.6.0",
 		"@types/react": "^19.1.16",
 		"@types/react-dom": "^19.1.9",
 		"@types/styled-components": "^5.1.35",
 		"@typescript-eslint/eslint-plugin": "^8.46.2",
 		"@vitejs/plugin-react": "^5.0.4",
+		"babel-plugin-react-compiler": "^1.0.0",
 		"eslint": "^9.36.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.22",
 		"globals": "^16.4.0",
+		"jsdom": "^27.0.1",
 		"prettier": "3.6.2",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.45.0",
-		"vite": "^7.1.7"
+		"vite": "^7.1.7",
+		"vite-tsconfig-paths": "^5.1.4",
+		"vitest": "^4.0.2"
 	}
 }
