--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"firebase": "^12.4.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"react-icons": "^5.5.0",
 		"styled-components": "^6.1.19",
 		"zustand": "^5.0.8"
 	},
