--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-dom": "^19.1.1",
 		"react-icons": "^5.5.0",
 		"styled-components": "^6.1.19",
+		"zod": "^4.1.12",
 		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
