--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -3,5 +3,5 @@
 	"compilerOptions": {
 		"types": ["vitest/globals", "@testing-library/jest-dom"]
 	},
-	"include": ["__tests__/**/*"]
+	"include": ["src", "__tests__", "vitest.config.ts"]
 }
