--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
 		"build": "tsc -b && vite build",
 		"preview": "vite preview",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"lint:fix": "eslint . --ext ts,tsx --fix",
 		"type-check": "tsc --noEmit",
 		"type-check:watch": "tsc --noEmit --watch",
 		"clean": "rm -rf dist node_modules/.tmp",
 		"test": "vitest",
 		"test:ui": "vitest --ui",
-		"coverage": "vitest run --coverage"
+		"coverage": "vitest run --coverage",
+		"prettier": "prettier --check .",
+		"prettier:fix": "prettier --write ."
 	},
 	"dependencies": {
 		"date-fns": "^4.1.0",
