--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 		"@types/styled-components": "^5.1.35",
 		"@typescript-eslint/eslint-plugin": "^8.46.2",
 		"@vitejs/plugin-react": "^5.0.4",
+		"@vitest/coverage-v8": "4.0.2",
+		"@vitest/ui": "4.0.2",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"eslint": "^9.36.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
