--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"firebase": "^12.4.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"react-hot-toast": "^2.6.0",
 		"react-icons": "^5.5.0",
 		"styled-components": "^6.1.19",
 		"zod": "^4.1.12",
